syntax = "proto3"; // 声明了protobuf的版本

package fixbug; // 声明了代码所在的包，C++没有包管理，这相当于namespace

// 表示生成service服务类和rpc方法描述，默认不生成
option cc_generic_services = true;

message ResultCode
{
    int32 errcode = 1;
    bytes errmsg = 2;
}

// 定义登录消息类型 「name, arg」
// 这里得类型不是C++得类型
message LoginRequest
{
    bytes name = 1; // 第一个字段
    bytes pwd = 2;  // 第二个字段
}

// 定义登录响应消息类型
message LoginResponse
{
    ResultCode res = 1;
    bool success = 2;
}

message GetFriendListRequest
{
    uint32 userid = 1;
}

message User
{
    bytes name = 1;
    uint32 age = 2;
    enum Sex
    {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListRequestResponse
{
    ResultCode result =  1;
    repeated User friend_list = 2; // 定义了一个列表类型（repeated：重复）
}

// 定义RPC服务接口类和服务方法
service UserServiceRpc
{
    rpc GetFriendList(GetFriendListRequest) returns (GetFriendListRequestResponse);
}